syntax = "proto3";

import "auth/user_token.proto";

package banner;

service BannerService {
    rpc CreateBanner(CreateBannerRequest) returns (BannerResponse);
    rpc FindBannerByTenantId(FindBannerByTenantIdRequest) returns (FindAllBannersResponse);
    rpc UpdateBanner(UpdateBannerRequest) returns (BannerResponse);
    rpc DeleteBanner(DeleteBannerRequest) returns (BannerResponse);
}

message Banner {
    string id = 1;
    string tenant_id = 2;
    string title = 3;
    string description = 4;
    string text_color = 5;
    string image = 6;
    string created_at = 7;
    string updated_at = 8;
}

message CreateBannerRequest {
    userToken.User user = 1;
    string tenant_id = 2;
    string title = 3;
    string description = 4;
    string text_color = 5;
    string image = 6;
}

message FindBannerByTenantIdRequest {
    string domain = 1;
    string tenant_id = 2;
}

message UpdateBannerRequest {
    userToken.User user = 1;
    string tenant_id = 2;
    string id = 3;
    optional string title = 4;
    optional string description = 5;
    optional string text_color = 6;
    optional string image = 7;
}

message DeleteBannerRequest {
    userToken.User user = 1;
    string tenant_id = 2;
    string id = 3;
}

message BannerResponse {
    Banner banner = 1;
}

message FindAllBannersResponse {
    repeated Banner banners = 1;
}
